# CrossCompileQtForOpi

./: README.md
HelloWorld/: CMakeLists.txt  Main.qml  main.cpp
